feat: v5.0.0 多模态需求拆解与全栈升级
- 新增多模态需求拆解：RequirementController/Service、MultimodalModelClient、附件解析与 PRD 生成（schema-v5-multimodal.sql）
- 新增模型能力管理与异步任务框架（ModelCapabilitySchemaInitializer、AsyncConfig、TenantContextTaskDecorator）
- 心跳鉴权重构（HeartbeatAuthenticator），升级评估/数据集/数据生成/工作流/Agent 监控等核心模块
- 部署清理：删除冗余模板，新增 .env.example、deploy/mysql/00-bootstrap.sql、scripts/check-compose.mjs
- 前端消费台与基准测试页面升级（ModelCapabilities、BenchmarkEditor、WorkflowEditor 等）
- 补充单元测试与集成测试覆盖（权限/契约/能力/多模态客户端）
- 更新 PRD 与 PROJECT_PROGRESS 文档

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>